[gd_scene load_steps=31 format=3 uid="uid://chhnrbkrbyki8"]

[ext_resource type="Resource" uid="uid://bpf8tvkjpdpkk" path="res://slimes/player_slime/scripts/movement_stats/base_movement_stats.tres" id="2_g85qg"]
[ext_resource type="Script" path="res://slimes/player_slime/scripts/player_slime_controller.gd" id="3_huhpb"]
[ext_resource type="Resource" uid="uid://b235orn8xp7ma" path="res://slimes/player_slime/scripts/attack_stats/base_player_attack.tres" id="3_lidf5"]
[ext_resource type="Resource" uid="uid://c7rqum86aw0ou" path="res://slimes/player_slime/scripts/spells/base_spell.tres" id="4_0rt85"]
[ext_resource type="Texture2D" uid="uid://yjfpq0gxl6px" path="res://art/decorations/player_eyes.png" id="4_6i3ux"]
[ext_resource type="Texture2D" uid="uid://dxuu5p3jcri3b" path="res://art/decorations/player_mouth.png" id="5_cfeg0"]
[ext_resource type="PackedScene" uid="uid://7a7a6ti826h0" path="res://slimes/player_slime/scenes/slime_soft_body.tscn" id="5_srknk"]
[ext_resource type="Script" path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" id="6_l0ojx"]
[ext_resource type="Script" path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" id="7_0lg1a"]
[ext_resource type="Script" path="res://addons/imjp94.yafsm/src/states/State.gd" id="8_quk8h"]
[ext_resource type="Script" path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" id="9_wwxss"]
[ext_resource type="PackedScene" uid="uid://p7dbpv7oplon" path="res://ui/scenes/cursor_radials.tscn" id="10_heor7"]
[ext_resource type="Script" path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" id="11_c2rr6"]
[ext_resource type="Script" path="res://slimes/player_slime/scripts/health_manager.gd" id="13_ewdvp"]

[sub_resource type="Resource" id="Resource_r1786"]
script = ExtResource("8_quk8h")
name = "Entry"
metadata/graph_offset = Vector2(325, 242)

[sub_resource type="Resource" id="Resource_23bk0"]
script = ExtResource("8_quk8h")
name = "dashing"
metadata/graph_offset = Vector2(460.5, 142)

[sub_resource type="Resource" id="Resource_urcs5"]
script = ExtResource("8_quk8h")
name = "casting"
metadata/graph_offset = Vector2(603, 142)

[sub_resource type="Resource" id="Resource_qrgjw"]
script = ExtResource("8_quk8h")
name = "active"
metadata/graph_offset = Vector2(525, 242)

[sub_resource type="Resource" id="Resource_qtape"]
script = ExtResource("8_quk8h")
name = "inactive"
metadata/graph_offset = Vector2(800.5, 242)

[sub_resource type="Resource" id="Resource_nte1n"]
script = ExtResource("9_wwxss")
from = "Entry"
to = "active"
conditions = {}
priority = 0

[sub_resource type="Resource" id="Resource_nrv7l"]
script = ExtResource("11_c2rr6")
name = "deactivate"

[sub_resource type="Resource" id="Resource_loopj"]
script = ExtResource("9_wwxss")
from = "active"
to = "inactive"
conditions = {
"deactivate": SubResource("Resource_nrv7l")
}
priority = 0

[sub_resource type="Resource" id="Resource_8bf4x"]
script = ExtResource("11_c2rr6")
name = "dash"

[sub_resource type="Resource" id="Resource_rduvx"]
script = ExtResource("9_wwxss")
from = "active"
to = "dashing"
conditions = {
"dash": SubResource("Resource_8bf4x")
}
priority = 0

[sub_resource type="Resource" id="Resource_gf6cf"]
script = ExtResource("11_c2rr6")
name = "activate"

[sub_resource type="Resource" id="Resource_b5lx7"]
script = ExtResource("9_wwxss")
from = "inactive"
to = "active"
conditions = {
"activate": SubResource("Resource_gf6cf")
}
priority = 0

[sub_resource type="Resource" id="Resource_sruyr"]
script = ExtResource("9_wwxss")
from = "dashing"
to = "active"
conditions = {}
priority = 0

[sub_resource type="Resource" id="Resource_w7qyo"]
script = ExtResource("9_wwxss")
from = "casting"
to = "active"
conditions = {}
priority = 0

[sub_resource type="Resource" id="Resource_ycdjk"]
script = ExtResource("7_0lg1a")
states = {
"Entry": SubResource("Resource_r1786"),
"active": SubResource("Resource_qrgjw"),
"casting": SubResource("Resource_urcs5"),
"dashing": SubResource("Resource_23bk0"),
"inactive": SubResource("Resource_qtape")
}
transitions = {
"Entry": {
"active": SubResource("Resource_nte1n")
},
"active": {
"dashing": SubResource("Resource_rduvx"),
"inactive": SubResource("Resource_loopj")
},
"casting": {
"active": SubResource("Resource_w7qyo")
},
"dashing": {
"active": SubResource("Resource_sruyr")
},
"inactive": {
"active": SubResource("Resource_b5lx7")
}
}
name = ""

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jk8vh"]
radius = 30.0
height = 74.0

[node name="player" type="Node2D" node_paths=PackedStringArray("softbody", "decorations", "cursor_radials", "hurtbox")]
physics_interpolation_mode = 2
texture_filter = 1
script = ExtResource("3_huhpb")
softbody = NodePath("slime_soft_body")
decorations = [NodePath("decorations/player_eyes"), NodePath("decorations/player_mouth"), NodePath("decorations/AudioListener2D"), NodePath("decorations/Node2D")]
movement_stats = ExtResource("2_g85qg")
player_attack_stats = ExtResource("3_lidf5")
spell = ExtResource("4_0rt85")
cursor_radials = NodePath("CursorRadials")
hurtbox = NodePath("hurtbox")

[node name="slime_soft_body" parent="." instance=ExtResource("5_srknk")]

[node name="decorations" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="decorations"]

[node name="Label" type="Label" parent="decorations/Node2D"]
offset_right = 40.0
offset_bottom = 25.0

[node name="player_eyes" type="Sprite2D" parent="decorations"]
modulate = Color(1, 1, 1, 0.670588)
position = Vector2(33, 29)
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_6i3ux")

[node name="player_mouth" type="Sprite2D" parent="decorations"]
modulate = Color(1, 1, 1, 0.670588)
position = Vector2(33, 27)
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_cfeg0")

[node name="AudioListener2D" type="AudioListener2D" parent="decorations"]
current = true

[node name="player_state" type="Node" parent="."]
script = ExtResource("6_l0ojx")
state_machine = SubResource("Resource_ycdjk")

[node name="CursorRadials" parent="." instance=ExtResource("10_heor7")]
z_index = 10
position = Vector2(-465, -111)

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(33, 26)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jk8vh")

[node name="health_manager" type="Node" parent="."]
script = ExtResource("13_ewdvp")

[connection signal="transited" from="player_state" to="." method="_on_player_state_transited"]
[connection signal="updated" from="player_state" to="." method="_on_player_state_updated"]
